--- a/proxy_map.conf
+++ b/proxy_map.conf
@@ -1,8 +1,9 @@
 map $connect_target $http_proxy {
   hostnames;
-  default           ${ple_1_ip}:3128;
-  .it.att.com       ${ple_1_ip}:3128;
-  .att.com          ${ple_1_ip}:3128;
-  .google.com       ${ple_2_ip}:3128;
-  .duckduckgo.com   ${ple_2_ip}:3128;
+  default           10.211.1.7:3128;
+  .it.att.com       10.211.1.7:3128;
+  .att.com          10.211.1.7:3128;
+  .google.com       10.211.1.6:3128;
+  .duckduckgo.com   10.211.1.6:3128;
+  .brave.com        10.211.1.6:3128;
 }
