--- a/proxy_map.conf
+++ b/proxy_map.conf
@@ -1,7 +1,7 @@
 map $connect_target $http_proxy {
   hostnames;
   default           10.211.1.7:3128;
-  .it.att.com       10.211.1.7:3128;
+#  .it.att.com       10.211.1.7:3128;
   .att.com          10.211.1.7:3128;
   .google.com       10.211.1.6:3128;
   .duckduckgo.com   10.211.1.6:3128;
