--- a/proxy_map.conf
+++ b/proxy_map.conf
@@ -1,9 +1,9 @@
 map $connect_target $http_proxy {
   hostnames;
-  default           10.211.1.7:3128;
-  .it.att.com       10.211.1.7:3128;
-  .att.com          10.211.1.7:3128;
-  .google.com       10.211.1.6:3128;
-  .duckduckgo.com   10.211.1.6:3128;
-  .brave.com        10.211.1.6:3128;
+  default           proxy_2:3128;
+  .it.att.com       proxy_2:3128;
+  .att.com          proxy_2:3128;
+  .google.com       proxy_1:3128;
+  .duckduckgo.com   proxy_1:3128;
+  .brave.com        proxy_1:3128;
 }
