Corrected proxy_map.conf to use new syntax

--- a/proxy_map.conf
+++ b/proxy_map.conf
@@ -1,9 +1,9 @@
 map $connect_target $http_proxy {
   hostnames;
-  default           proxy_2:3128;
-  .it.att.com       proxy_2:3128;
-  .att.com          proxy_2:3128;
-  .google.com       proxy_1:3128;
-  .duckduckgo.com   proxy_1:3128;
-  .brave.com        proxy_1:3128;
+  default           ple_2:3128;
+  .it.att.com       ple_2:3128;
+  .att.com          ple_2:3128;
+  .google.com       ple_1:3128;
+  .duckduckgo.com   ple_1:3128;
+  .brave.com        ple_1:3128;
 }
