--- a/bigip.conf
+++ b/bigip.conf
@@ -1,6 +1,7 @@
 #TMSH-VERSION: 16.1.0
 
-ltm pool p01-remote_ssl { members { __NODE_ADDR__:443 } }
+__POOL_CFG__
+
 
 ltm virtual vs01-clear_to_ssl {
     destination __VS_ADDR__:80
