--- a/bigip.conf
+++ b/bigip.conf
@@ -2,7 +2,6 @@
 
 __POOL_CFG__
 
-
 ltm virtual vs01-clear_to_ssl {
     destination __VS_ADDR__:80
     ip-protocol tcp
@@ -14,4 +13,44 @@ ltm virtual vs01-clear_to_ssl {
     source-address-translation { type automap }
     translate-address enabled
     translate-port enabled
+}
+
+ltm virtual vs00-health_check {
+  destination __VS_ADDR__:65000
+  ip-protocol tcp
+  mask 255.255.255.255
+  profiles { http { } tcp { } }
+  rules { healthcheck }
+}
+
+ltm rule healthcheck {
+when HTTP_REQUEST {
+  HTTP::respond 200 -version 1.0
+}
+}
+
+
+sys icall handler periodic /Common/termination_check {
+  interval 60
+  script /Common/termination_check
+}
+
+sys icall script /Common/termination_check {
+  app-service none
+  definition {
+  # This iCall script checks for termination events and, if found
+  # disables new connections by disabling the health-check virtual-server
+
+  set metadataUrl "http://169.254.169.254/metadata/scheduledevents?api-version=2020-07-01"
+  set headers     "Metadata:true"
+  set filter      {.Events[0].EventType}
+
+  set eventType  [exec curl -0s -H $headers $metadataUrl | jq -r $filter]
+
+  if { [info exists eventType] && $eventType == "Terminate" } {
+    exec tmsh modify ltm virtual vs00-health_check disabled
+  }
+  }
+  description none
+  events none
 }
